# base-fastApi

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Justfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  pytest.ini  temp_roles.py
.claude/agents/: auth-access-engineer.agent.md  db-migration-operator.agent.md  quality-investigator.agent.md  storage-integration-engineer.agent.md
.claude/prompts/: storage-update.prompt.md
.claude/skills/alembic-migration-flow/: SKILL.md
.claude/skills/ci-pipeline-summary/: SKILL.md
.claude/skills/storage-backend-integration/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: auth-access-engineer.agent.md  fastapi-architect.agent.md
.github/instructions/: fastapi-service-slice.instructions.md
.github/policies/: STRICT_AGENT_POLICY.md
.github/prompts/: create-service.prompt.md  quality-loop.prompt.md
.github/skills/alembic-migration-flow/: SKILL.md
.github/skills/auth-jwt-guards/: SKILL.md
.github/skills/backend-quality-loop/: SKILL.md
.github/skills/fastapi-service-slice/: SKILL.md
.github/skills/storage-backend-integration/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
app/: asgi.py  asgi_test.py  config.py  views.py
app/core/: startup_checks.py
app/core/core_api/: healthcheck.py  healthcheck_test.py  schemas.py
app/core/core_auth/: README.md  __init__.py  acl.py  core_auth_test.py  deps.py  keys.py  models.py  roles.py  service.py  settings.py  utils.py  validators.py
app/core/core_cache/: __init__.py  memory_cache.py  memory_cache_test.py
app/core/core_db/: __init__.py  async_db_session_maker.py  async_db_session_maker_test.py  base.py  connection.py  db_dependency.py  migrations.py
app/core/core_extensions/: __init__.py  __init___test.py  loader.py  loader_test.py
app/core/core_logging/: AppLogger.py  JourneyLogger.py  LogTypeAdapter.py  MyLogger.py
app/core/core_logging/logger_config_files/: journey_structure.json  stdout_config.json
app/core/core_messages/: __init__.py  loader.py  loader_test.py  messages.de.json  messages.en.json  middleware.py  middleware_test.py
app/core/core_middleware/: http_security_middleware.py  http_security_middleware_test.py  profiler_middleware.py  profiler_middleware_test.py
app/core/core_storage/: README.md  __init__.py  base.py  base_test.py  dependency.py  exceptions.py  factory.py  factory_test.py  filesystem.py  filesystem_test.py  s3.py  s3_test.py  settings.py
app/services/: README.md
app/shared/: __init__.py  types.py
app/shared/errors/: __init__.py  builder.py  builder_test.py  exceptions.py  exceptions_test.py  handlers.py  handlers_test.py  registry.py  registry_test.py
app/shared/exceptions/: __init__.py  api_errors.py  error_handlers.py
app/shared/jobs/: __init__.py  exceptions.py  models.py  ports.py
app/shared/schemas/: __init__.py  errors.py
app/shared/utils/: __init__.py  pagination.py  text.py  text_test.py  time.py  uuid.py
app/utils/: datetime_utils.py
app/utils/development_helpers/: create_fake_token.py
docs/Development_Setup/: README.md
docs/Middleware/: Profiler.md
docs/legacy_stuff/: README.md
src/: asgi.py  config.py
src/app/: __init__.py
src/core/: README.md  __init__.py  constants.py  errors.py  factory.py  lifespan.py  middleware.py  openapi.py  routes.py
src/core/auth/: README.md  __init__.py  deps.py  keys.py  models.py  roles.py  settings.py  utils.py  validators.py
src/core/error_handling/: README.md  __init__.py  payload.py  types.py
src/core/error_handling/handlers/: __init__.py  database_handlers.py  domain_handlers.py  http_handlers.py  system_handlers.py
src/core/healthcheck/: README.md  routes.py  schemas.py  security.py  services.py
src/core/settings/: __init__.py
src/db/: README.md  __init__.py  database.py  dsn.py  models.py  options.py
src/db/migration/: alembic.ini  env.py
src/service/: __init__.py
src/shared/: types.py
src/shared/logging/: AppLogger.py  JourneyLogger.py  LogTypeAdapter.py  MyLogger.py  app_logger.py  request_context.py
src/shared/logging/logger_config_files/: journey_structure.json  stdout_config.json
src/shared/schemas/request/: Pagination.py
src/shared/schemas/response/: Pagination.py
src/shared/utils/: string_utils.py
src/utils/: datetime_utils.py  env_helpers.py  idempotency.py  journey_utils.py  model_utils.py
src/utils/sort/: resolve_sort.py
src/utils/time/: time_utils.py
tests/: conftest.py
tests/e2e/: test_api_routing.py  test_core.py  test_http_e2e.py
tests/integration/: test_health_endpoints.py
tests/unit/: test_auth.py  test_auth_keys.py  test_config.py  test_core_infra.py  test_db.py  test_error_handling.py  test_healthcheck.py  test_logging.py  test_pagination_schemas.py  test_utils.py
