[project]
name = "service"
version = "0.0.1"
description = "API Service"
readme = "README.md"
requires-python = ">=3.13,<3.14"

# RUNTIME
dependencies = [
  "fastapi[standard]~=0.115.4",
  "uvicorn[standard]~=0.32.0",
  "sqlalchemy[asyncio]>=2.0.43,<3.0",
  "alembic>=1.13.3,<2.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "orjson>=3.10,<4.0",
  "asyncpg>=0.29,<1.0",
  "PyJWT>=2.8,<3.0",
  "babel>=2.14,<3.0",
  "cryptography>=43,<44"
]

[project.optional-dependencies]
gunicorn = ["gunicorn>=23,<24", "uvicorn[standard]>=0.32,<0.33"]

[project.scripts]
service-api = "uvicorn:main"

[dependency-groups]
dev = [
  # Test
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<6.0",
  "hypothesis>=6.115,<7.0",
  "httpx>=0.27,<0.28",
  "aiosqlite>=0.20,<0.22",
  # Lint/Typecheck
  "ruff>=0.6,<0.7",
  "mypy>=1.11,<2.0",
  "flake8>=7.1,<8.0",
  "pyright>=1.1,<2.0",
  "types-orjson>=3.6,<4.0",
  # Tooling
  "pre-commit>=4.0,<5.0",
]

[build-system]
requires = ["uv-build>=0.4"]
build-backend = "uv_build"

# ----------------------------
# Tool-Konfigurationen
# ----------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["E","F","I","B","UP","N","S","C90","ASYNC","PTH","PL"]
lint.ignore = ["S311", "E501", "N999", "N815", "PLC0415", "PLR2004", "S110", "E402"]
exclude = ["src/db/migration/versions"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"src/logging/**" = ["N999", "E501", "N815"]
"src/schemas/**" = ["N815", "E501"]
"src/models/**" = ["PLC0415", "E501"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = ["src/db/migration/versions", "tests/[^/]+/conftest.py"]
mypy_path = "src"
namespace_packages = true

[tool.coverage.run]
branch = true
source = ["src/"]
omit = ["src/db/migration/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
