[project]
name = "app"
version = "0.0.0"
description = "Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.47",
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "gunicorn>=25.1.0",
    "pyjwt>=2.11.0",
    "cryptography>=42.0",
    "boto3>=1.42.0",
    "tzdata>=2025.3",
    "uvicorn>=0.42.0",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest>=9.0.2",
    "pytest-cov>=4.0",
    "pyinstrument>=5.1.2",
    "psycopg>=3.2",
    "mypy>=1.10",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.1,<0.11"]
build-backend = "uv_build"

# --- TOOLS ---

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C90", "ASYNC", "PTH", "PL"]
ignore = ["S311", "E501", "N999", "N815", "PLC0415", "PLR2004", "S110", "E402", "B008"]
exclude = ["alembic/versions"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S105", "S107", "N803", "N806"]
"app/**/tests/**" = ["S101", "S106", "S105", "S107", "N803", "N806", "PLR0913"]
"**/*_test.py" = ["S101", "S105", "S106", "S603", "N817", "PLR0913"]
"scripts/**" = ["B904", "PLR0913", "S108", "S113", "PTH123"]
"app/utils/development_helpers/create_fake_token.py" = ["S105"]
"app/logging/**" = ["N999", "E501", "N815"]
"app/schemas/**" = ["N815", "E501"]
"app/models/**" = ["PLC0415", "E501"]
"app/services/docgen/errors/messages.py" = ["S105"]
"app/services/docgen/infrastructure/providers.py" = ["PLW0603"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
namespace_packages = true
mypy_path = "app"
exclude = [
    '^alembic/versions/',
    '^tests/[^/]+/conftest\.py$'
]

[[tool.mypy.overrides]]
module = [
    "app.services.docgen.infrastructure.pdf_decorator",
    "app.services.docgen.infrastructure.pdf_decoration_strategies",
    "app.services.docgen.infrastructure.preview_generator",
    "app.services.docgen.infrastructure.pdf_utils",
    "app.services.docgen.infrastructure.digital_signature",
    "app.services.docgen.infrastructure.docxtpl_renderer"
]
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "app.core.core_api.*",
    "app.services.docgen.api.*",
    "app.services.docgen.tests.*",
    "app.core.core_logging.*",
    "app.services.docgen.config.*",
    "app.services.docgen.application.batch_processor",
    "app.services.docgen.application.batch_use_case",
    "app.services.docgen.application.build",
    "app.core.core_auth.*",
    "app.core.core_middleware.*",
    "app.views"
]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "app.services.docgen.application.orchestrator",
    "app.services.docgen.infrastructure.*",
    "app.services.docgen.infrastructure.template_repository",
    "app.services.docgen.domain.placeholder_extractor",
    "app.services.docgen.validation.template.template_validation_service",
    "app.services.docgen.utils.docx_utils",
    "app.services.docgen.application.view",
    "app.core.core_logging.MyLogger",
    "app.core.core_logging.JourneyLogger"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.core.core_auth.rbac_checker"
warn_return_any = false

[[tool.mypy.overrides]]
module = ["app.core.core_api.advanced_v1", "app.core.core_api.config_v1"]
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
addopts = "-ra -vv --strict-markers"
testpaths = ["tests", "app"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = [".", "app"]
markers = [
    "unit: Schnelle, isolierte Unit-Tests",
    "integration: Tests über mehrere Schichten",
    "e2e: End-to-End Tests",
    "slow: Langsame Tests"
]
filterwarnings = ["ignore::DeprecationWarning:pkg_resources.*"]

[tool.coverage.run]
branch = true
source = ["app/"]
omit = ["alembic/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "tests"]
exclude = ["alembic/versions"]
reportMissingTypeStubs = "warning"
